Створено за допомогою Colab

--- a/Detectron2_Tutorial.ipynb
+++ b/Detectron2_Tutorial.ipynb
@@ -37,13 +37,13 @@
     {
       "cell_type": "markdown",
       "source": [
-        "YOLOv8 — це модель для виявлення об'єктів у реальному часі. У неї 9 млн параметрів, і вона працює дуже швидко.\n",
+        "YOLOv8 - це модель для виявлення об'єктів у реальному часі. У неї 9 млн параметрів, і вона працює дуже швидко.\n",
         "\n",
-        "RT-DETR — використовує трансформери. Є повільнішою за YOLOv8, але дає кращі результати по точності.\n",
+        "RT-DETR - використовує трансформери. Є повільнішою за YOLOv8, але дає кращі результати по точності.\n",
         "\n",
-        "Mask R-CNN — це модель для складних задач (напр. інстанс-сегментації). Вона має 44 млн параметрів, працює повільніше і здатна точно виділити форму об'єктів на зображенні.  \n",
+        "Mask R-CNN - це модель для складних задач (напр. інстанс-сегментації). Вона має 44 млн параметрів, працює повільніше і здатна точно виділити форму об'єктів на зображенні.  \n",
         "\n",
-        "У висновку: YOLOv8 — для швидкості, RT-DETR — якщо потрібен баланс, а Mask R-CNN — якщо важлива точність сегментації."
+        "У висновку: YOLOv8 для швидкості, RT-DETR якщо потрібен баланс, а Mask R-CNN якщо важлива точність сегментації."
       ],
       "metadata": {
         "id": "GgskIXGfuo_0"
